Change Seek AR camera to Seek Camera and globalize shortcut on android; addresses part of #440

--- a/ios/Seek/Info.plist
+++ b/ios/Seek/Info.plist
@@ -65,7 +65,7 @@
 			<key>UIApplicationShortcutItemIconType</key>
 			<string>UIApplicationShortcutIconTypeCapturePhoto</string>
 			<key>UIApplicationShortcutItemTitle</key>
-			<string>Seek AR Camera</string>
+			<string>Seek Camera</string>
 			<key>UIApplicationShortcutItemType</key>
 			<string>$(PRODUCT_BUNDLE_IDENTIFIER).CameraAction</string>
 		</dict>
