--- a/package.json
+++ b/package.json
@@ -7,19 +7,15 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios --simulator='iPhone 13'",
     "start": "react-native start",
-    "lint": "eslint . --max-warnings 0",
-    "flow": "flow"
+    "lint": "npm run lint:eslint && npm run lint:flow",
+    "lint:eslint": "eslint .",
+    "lint:flow": "flow check",
+    "prepare": "husky install"
   },
   "husky": {
     "hooks": {
-      "pre-push": "lint-staged"
+      "pre-commit": "npm run lint"
     }
-  },
-  "lint-staged": {
-    "./**/*.{js,jsx}": [
-      "npm run lint",
-      "npm run flow"
-    ]
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.9",
@@ -29,6 +25,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^6.0.2",
     "@react-native-picker/picker": "^2.1.0",
+    "@react-native/normalize-color": "^2.0.0",
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/material-top-tabs": "^6.2.2",
     "@react-navigation/native": "^6.0.11",
@@ -54,7 +51,7 @@
     "react-native-localize": "^2.1.5",
     "react-native-logs": "^3.0.4",
     "react-native-mail": "^6.1.1",
-    "react-native-maps": "^0.29.3",
+    "react-native-maps": "^0.31.1",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-open-settings": "github:albullington/react-native-open-settings",
@@ -86,9 +83,9 @@
     "@react-native-community/eslint-config": "^3.0.1",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^7.32.0",
+    "eslint-plugin-jest": "^26.5.3",
     "flow-bin": "^0.158.0",
-    "husky": "^7.0.2",
-    "lint-staged": "^11.2.3",
+    "husky": "^8.0.0",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-native-clean-project": "^4.0.1"
   }
