Resolved dependency issues, fixed unique key bug

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-marker": "^0.6.3",
     "react-native-image-resizer": "^1.4.5",
-    "react-native-inat-camera": "github:inaturalist/react-native-inat-camera",
+    "react-native-inat-camera": "github:inaturalist/react-native-inat-camera#react-native-66 ",
     "react-native-jwt-io": "^1.0.3",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-localize": "^2.1.5",
@@ -65,7 +65,7 @@
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-store-review": "^0.2.1",
     "react-native-svg": "^12.3.0",
-    "react-native-svg-charts": "^5.4.0",
+    "react-native-svg-charts": "github:agris-visikon/react-native-svg-charts#dev",
     "react-native-tab-view": "^3.1.1",
     "react-native-uuid-generator": "^6.1.1",
     "react-native-webp-format": "^1.1.2",
@@ -76,10 +76,9 @@
     "@babel/core": "^7.15.8",
     "@babel/preset-flow": "^7.14.5",
     "@babel/runtime": "^7.15.4",
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@react-native-community/eslint-config": "^3.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "eslint": "^7.32.0",
-    "eslint-plugin-jest": "^26.6.0",
+    "eslint-plugin-jest": "^27.0.4",
     "flow-bin": "^0.158.0",
     "husky": "^8.0.1",
     "metro-react-native-babel-preset": "^0.66.2",
