--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "react-native-uuid-generator": "^6.1.1",
     "react-native-webp-format": "^1.1.2",
     "react-native-webview": "^11.22.5",
-    "realm": "^10.19.5"
+    "realm": "10.20.0-beta.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
