--- a/.flowconfig
+++ b/.flowconfig
@@ -20,6 +20,8 @@ node_modules/react-native/Libraries/polyfills/.*
 ; Flow doesn't support platforms
 .*/Libraries/Utilities/LoadingView.js
 
+.*/node_modules/resolve/test/resolver/malformed_package_json/package\.json$
+
 [untyped]
 .*/node_modules/@react-native-community/cli/.*/.*
 
@@ -79,4 +81,4 @@ untyped-import
 untyped-type-import
 
 [version]
-^0.158.0
+^0.170.0
