--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "npm run lint:eslint",
     "lint:eslint": "eslint .",
     "lint:flow": "flow check",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.9",
@@ -82,6 +83,7 @@
     "flow-bin": "^0.158.0",
     "husky": "^8.0.1",
     "metro-react-native-babel-preset": "^0.67.0",
+    "patch-package": "^6.4.7",
     "react-native-clean-project": "^4.0.1"
   }
 }
