--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "npm run lint:eslint",
     "lint:eslint": "eslint .",
     "lint:flow": "flow check",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.9",
@@ -30,15 +31,15 @@
     "fbjs": "^3.0.4",
     "i18n-js": "^3.9.2",
     "inaturalistjs": "github:inaturalist/inaturalistjs",
-    "react": "^17.0.2",
-    "react-native": "^0.66.1",
+    "react": "17.0.2",
+    "react-native": "0.68.4",
     "react-native-check-app-install": "github:redpandatronicsuk/react-native-check-app-install",
     "react-native-check-box": "^2.1.7",
     "react-native-device-info": "^8.4.1",
     "react-native-fs": "^2.18.0",
     "react-native-geocoder": "git+https://github.com/a-voityuk/react-native-geocoder.git",
     "react-native-geolocation-service": "^5.3.0",
-    "react-native-gesture-handler": "^1.10.3",
+    "react-native-gesture-handler": "^2.7.1",
     "react-native-image-marker": "^0.6.3",
     "react-native-image-resizer": "^1.4.5",
     "react-native-inat-camera": "github:inaturalist/react-native-inat-camera",
@@ -81,7 +82,8 @@
     "eslint-plugin-jest": "^27.0.4",
     "flow-bin": "^0.158.0",
     "husky": "^8.0.1",
-    "metro-react-native-babel-preset": "^0.66.2",
+    "metro-react-native-babel-preset": "^0.67.0",
+    "patch-package": "^6.4.7",
     "react-native-clean-project": "^4.0.1"
   }
 }
