--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/netinfo": "^6.0.2",
     "@react-native-masked-view/masked-view": "^0.2.8",
-    "@react-native-picker/picker": "^2.1.0",
+    "@react-native-picker/picker": "^2.4.8",
     "@react-native/normalize-color": "^2.0.0",
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/material-top-tabs": "^6.2.2",
@@ -31,8 +31,8 @@
     "fbjs": "^3.0.4",
     "i18n-js": "^3.9.2",
     "inaturalistjs": "github:inaturalist/inaturalistjs",
-    "react": "17.0.2",
-    "react-native": "0.68.4",
+    "react": "18.0.0",
+    "react-native": "^0.69.6",
     "react-native-check-app-install": "github:redpandatronicsuk/react-native-check-app-install",
     "react-native-check-box": "^2.1.7",
     "react-native-device-info": "^8.4.1",
@@ -71,7 +71,7 @@
     "react-native-uuid-generator": "^6.1.1",
     "react-native-webp-format": "^1.1.2",
     "react-native-webview": "^11.22.5",
-    "realm": "10.20.0-beta.2"
+    "realm": "^11.0.0-rc.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
@@ -82,7 +82,7 @@
     "eslint-plugin-jest": "^27.0.4",
     "flow-bin": "^0.158.0",
     "husky": "^8.0.1",
-    "metro-react-native-babel-preset": "^0.67.0",
+    "metro-react-native-babel-preset": "^0.70.3",
     "patch-package": "^6.4.7",
     "react-native-clean-project": "^4.0.1"
   }
