--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "npm run lint:eslint",
     "lint:eslint": "eslint .",
     "lint:flow": "flow check",
+    "test": "jest",
     "prepare": "husky install",
     "postinstall": "patch-package"
   },
@@ -79,12 +80,22 @@
     "@babel/preset-flow": "^7.14.5",
     "@babel/runtime": "^7.15.4",
     "@react-native-community/eslint-config": "^3.1.0",
+    "@testing-library/jest-native": "^5.1.2",
+    "@testing-library/react-native": "^11.4.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint-plugin-jest": "^27.0.4",
     "flow-bin": "^0.158.0",
     "husky": "^8.0.1",
+    "jest": "^29.2.2",
     "metro-react-native-babel-preset": "0.72.3",
     "patch-package": "^6.5.0",
-    "react-native-clean-project": "^4.0.1"
+    "react-native-clean-project": "^4.0.1",
+    "react-test-renderer": "18.1.0"
+  },
+  "jest": {
+    "preset": "react-native",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ]
   }
 }
