Enable test on CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Install deps
       run: npm install
     - run: npm run lint
-    # - run: npm test
+    - run: npm test
 
   notify:
     name: Notify Slack
