--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint:eslint": "eslint .",
     "lint:flow": "flow check",
     "test": "jest",
+    "test:watch": "jest --watch",
     "prepare": "husky install",
     "postinstall": "patch-package"
   },
@@ -97,6 +98,10 @@
   },
   "jest": {
     "preset": "react-native",
+    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?@react-native|react-native|@react-native-community|@react-navigation)"
+    ],
     "setupFiles": [
       "<rootDir>/tests/jest.setup.js"
     ],
