Change crowdin config

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -3,5 +3,5 @@ files:
     translation: /translations/%two_letters_code%.json
     update_option: update_as_unapproved
   - source: /ios/Seek/en.lproj/InfoPlist.strings
-    translation: ios/Seek/%two_letters_code%.lproj/InfoPlist.strings
+    translation: /ios/Seek/%two_letters_code%.lproj/InfoPlist.strings
     update_option: update_as_unapproved
