--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "seek",
-  "version": "2.14.5",
+  "version": "2.14.6",
   "description": "Seek by iNaturalist repo",
   "private": true,
   "scripts": {
@@ -34,6 +34,7 @@
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.5",
     "fbjs": "^3.0.4",
+    "geolib": "^3.3.3",
     "i18n-js": "^3.9.2",
     "inaturalistjs": "github:inaturalist/inaturalistjs",
     "react": "18.1.0",
@@ -98,7 +99,14 @@
   },
   "jest": {
     "preset": "react-native",
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
     "transformIgnorePatterns": [
       "node_modules/(?!(jest-)?@react-native|react-native|@react-native-community|@react-navigation)"
     ],
