Additional setup for testing with navigation

--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
       "node_modules/(?!(jest-)?@react-native|react-native|@react-native-community|@react-navigation)"
     ],
     "setupFiles": [
+      "./node_modules/react-native-gesture-handler/jestSetup.js",
       "<rootDir>/tests/jest.setup.js"
     ],
     "setupFilesAfterEnv": [
