--- a/.flowconfig
+++ b/.flowconfig
@@ -55,6 +55,11 @@ munge_underscores=true
 module.name_mapper='^react-native/\(.*\)$' -> '<PROJECT_ROOT>/node_modules/react-native/\1'
 module.name_mapper='^@?[./a-zA-Z0-9$_-]+\.\(bmp\|gif\|jpg\|jpeg\|png\|psd\|svg\|webp\|m4v\|mov\|mp4\|mpeg\|mpg\|webm\|aac\|aiff\|caf\|m4a\|mp3\|wav\|html\|pdf\)$' -> '<PROJECT_ROOT>/node_modules/react-native/Libraries/Image/RelativeImageStub'
 
+; https://github.com/facebook/flow/issues/4103#issuecomment-565613909
+; this is used to remove flow errors related to babel-plugin-module-resolver
+module.system.node.allow_root_relative=true
+module.system.node.root_relative_dirname=./src
+
 suppress_type=$FlowIssue
 suppress_type=$FlowFixMe
 suppress_type=$FlowFixMeProps
