--- a/package.json
+++ b/package.json
@@ -86,7 +86,9 @@
     "@react-native-community/eslint-config": "^3.1.0",
     "@testing-library/jest-native": "^5.1.2",
     "@testing-library/react-native": "^11.4.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "eslint-import-resolver-babel-module": "^5.3.1",
     "eslint-plugin-jest": "^27.0.4",
     "eslint-plugin-testing-library": "^5.9.1",
     "flow-bin": "^0.158.0",
