--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@react-navigation/material-top-tabs": "^6.3.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.3",
+    "@shopify/flash-list": "^1.4.0",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.5",
     "fbjs": "^3.0.4",
