Only run non-e2e tests in general testing

--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     ],
     "setupFilesAfterEnv": [
       "@testing-library/jest-native/extend-expect"
-    ]
+    ],
+    "testMatch": ["<rootDir>/tests/**/*.test.js"]
   }
 }
