--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "e2e": "npm run e2e:build && npm run e2e:test"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-camera-roll/camera-roll": "^5.0.4",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/datetimepicker": "^6.5.3",
@@ -30,10 +30,10 @@
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-native-picker/picker": "^2.4.8",
     "@react-native/normalize-color": "^2.0.0",
-    "@react-navigation/drawer": "^6.5.0",
-    "@react-navigation/material-top-tabs": "^6.3.0",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/stack": "^6.3.3",
+    "@react-navigation/drawer": "^6.5.4",
+    "@react-navigation/material-top-tabs": "^6.5.0",
+    "@react-navigation/native": "^6.1.0",
+    "@react-navigation/stack": "^6.3.8",
     "@shopify/flash-list": "^1.4.0",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.5",
@@ -87,19 +87,19 @@
     "@babel/core": "^7.15.8",
     "@babel/preset-flow": "^7.14.5",
     "@babel/runtime": "^7.15.4",
-    "@react-native-community/eslint-config": "^3.1.0",
-    "@testing-library/jest-native": "^5.1.2",
-    "@testing-library/react-native": "^11.4.0",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@testing-library/jest-native": "^5.3.2",
+    "@testing-library/react-native": "^11.5.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "detox": "^20.0.3",
     "eslint-import-resolver-babel-module": "^5.3.1",
-    "eslint-plugin-jest": "^27.0.4",
+    "eslint-plugin-jest": "^27.1.6",
     "eslint-plugin-testing-library": "^5.9.1",
     "flow-bin": "^0.158.0",
-    "husky": "^8.0.1",
-    "jest": "^29.2.2",
-    "metro-react-native-babel-preset": "0.72.3",
+    "husky": "^8.0.2",
+    "jest": "^29.3.1",
+    "metro-react-native-babel-preset": "^0.73.4",
     "patch-package": "^6.5.0",
     "react-native-clean-project": "^4.0.1",
     "react-test-renderer": "18.1.0"
