--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "i18n-js": "^3.9.2",
     "inaturalistjs": "github:inaturalist/inaturalistjs",
     "react": "18.1.0",
-    "react-native": "0.70.5",
+    "react-native": "^0.70.6",
     "react-native-check-app-install": "github:redpandatronicsuk/react-native-check-app-install",
     "react-native-check-box": "^2.1.7",
     "react-native-device-info": "^10.3.0",
