--- a/crowdin.yml
+++ b/crowdin.yml
@@ -14,6 +14,15 @@ files:
   - source: /fastlane/metadata/android/en/title.txt
     translation: /fastlane/metadata/android/%two_letters_code%/title.txt
     update_option: update_as_unapproved
+  - source: /fastlane/metadata/en/description.txt
+    translation: /fastlane/metadata/%osx_code%/description.txt
+    update_option: update_as_unapproved
+  - source: /fastlane/metadata/en/keywords.txt
+    translation: /fastlane/metadata/%osx_code%/keywords.txt
+    update_option: update_as_unapproved
+  - source: /fastlane/metadata/en/name.txt
+    translation: /fastlane/metadata/%osx_code%/name.txt
+    update_option: update_as_unapproved
   - source: /fastlane/metadata/en/subtitle.txt
     translation: /fastlane/metadata/%osx_code%/subtitle.txt
     update_option: update_as_unapproved
