Move testing eslint-plugin to be for tests only

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,5 @@
 {
-  "plugins": ["testing-library"],
-  "extends": "@react-native-community",
+  "extends": ["@react-native-community"],
   "rules": {
     "quotes": [2, "double"],
     "comma-dangle": [2, "never"],
