Add exception handler dependency

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-check-app-install": "github:redpandatronicsuk/react-native-check-app-install",
     "react-native-check-box": "^2.1.7",
     "react-native-device-info": "^10.3.0",
+    "react-native-exception-handler": "^2.10.10",
     "react-native-fs": "^2.18.0",
     "react-native-geocoder": "git+https://github.com/a-voityuk/react-native-geocoder.git",
     "react-native-geolocation-service": "^5.3.1",
@@ -83,7 +84,7 @@
     "react-native-webview": "^11.26.0",
     "realm": "^11.2.0"
   },
-  "devDependencies": { 
+  "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/preset-flow": "^7.14.5",
     "@babel/runtime": "^7.15.4",
