--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "react-native-picker-select": "^8.0.4",
     "react-native-progress-circle": "^2.1.0",
     "react-native-quick-actions": "^0.3.13",
-    "react-native-reanimated": "^2.13.0",
+    "react-native-reanimated": "^2.14.4",
     "react-native-render-html": "^5.1.0",
     "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^4.4.1",
@@ -80,11 +80,12 @@
     "react-native-svg-charts": "github:jtklein/react-native-svg-charts#dev",
     "react-native-tab-view": "^3.3.0",
     "react-native-uuid-generator": "^6.1.1",
+    "react-native-vision-camera": "^2.15.4",
     "react-native-webp-format": "^1.1.2",
     "react-native-webview": "^11.26.0",
     "realm": "^11.2.0"
   },
-  "devDependencies": { 
+  "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/preset-flow": "^7.14.5",
     "@babel/runtime": "^7.15.4",
