--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
     "react-native-vision-camera": "^2.15.4",
     "react-native-webp-format": "^1.1.2",
     "react-native-webview": "^11.26.0",
-    "realm": "11.3.1"
+    "realm": "^11.2.0",
+    "vision-camera-plugin-inatvision": "github:inaturalist/vision-camera-plugin-inatvision"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
