--- a/crowdin.yml
+++ b/crowdin.yml
@@ -17,16 +17,16 @@ files:
   - source: /fastlane/metadata/en-US/description.txt
     translation: /fastlane/metadata/%locale%/description.txt
     update_option: update_as_unapproved
-    excluded_target_languages: ["af", "bg", "eu", "kk", "kn", "si"]    
+    excluded_target_languages: [af, bg, eu, kk, kn, si]    
   - source: /fastlane/metadata/en-US/keywords.txt
     translation: /fastlane/metadata/%locale%/keywords.txt
     update_option: update_as_unapproved
-    excluded_target_languages: ["af", "bg", "eu", "kk", "kn", "si"]    
+    excluded_target_languages: [af, bg, eu, kk, kn, si]    
   - source: /fastlane/metadata/en-US/name.txt
     translation: /fastlane/metadata/%locale%/name.txt
     update_option: update_as_unapproved
-    excluded_target_languages: ["af", "bg", "eu", "kk", "kn", "si"]    
+    excluded_target_languages: [af, bg, eu, kk, kn, si]    
   - source: /fastlane/metadata/en-US/subtitle.txt
     translation: /fastlane/metadata/%locale%/subtitle.txt
     update_option: update_as_unapproved
-    excluded_target_languages: ["af", "bg", "eu", "kk", "kn", "si"]    
+    excluded_target_languages: [af, bg, eu, kk, kn, si]    
