--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "geolib": "^3.3.3",
     "i18n-js": "^3.9.2",
     "inaturalistjs": "github:inaturalist/inaturalistjs",
-    "react": "18.1.0",
-    "react-native": "0.70.8",
+    "react": "18.2.0",
+    "react-native": "0.71.6",
     "react-native-check-app-install": "github:redpandatronicsuk/react-native-check-app-install",
     "react-native-check-box": "^2.1.7",
     "react-native-device-info": "^10.3.0",
@@ -84,29 +84,38 @@
     "react-native-vision-camera": "^2.15.4",
     "react-native-webp-format": "^1.1.2",
     "react-native-webview": "^11.26.0",
-    "realm": "^11.2.0",
+    "realm": "^11.8.0",
     "vision-camera-plugin-inatvision": "github:inaturalist/vision-camera-plugin-inatvision"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
     "@babel/preset-flow": "^7.14.5",
-    "@babel/runtime": "^7.15.4",
+    "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "@testing-library/jest-native": "^5.3.2",
     "@testing-library/react-native": "^11.5.0",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^29.2.1",
+    "@types/react": "^18.0.24",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.2.1",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "detox": "^20.0.3",
+    "eslint": "^8.19.0",
     "eslint-import-resolver-babel-module": "^5.3.2",
     "eslint-plugin-jest": "^27.1.6",
     "eslint-plugin-testing-library": "^5.9.1",
     "flow-bin": "^0.158.0",
     "husky": "^8.0.2",
-    "jest": "^29.3.1",
-    "metro-react-native-babel-preset": "^0.73.4",
+    "jest": "^29.2.1",
+    "metro-react-native-babel-preset": "0.73.9",
     "patch-package": "^6.5.0",
+    "prettier": "^2.4.1",
     "react-native-clean-project": "^4.0.1",
-    "react-test-renderer": "18.1.0"
+    "react-test-renderer": "18.2.0",
+    "typescript": "4.8.4"
   },
   "jest": {
     "preset": "react-native",
