--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "android:device": "react-native run-android --variant release",
+    "android:device": "react-native run-android --mode release",
     "ios": "react-native run-ios --simulator='iPhone 14'",
     "ios:device": "react-native run-ios --device --configuration Release",
     "start": "react-native start",
