--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "android": "react-native run-android",
     "android:device": "react-native run-android --mode release",
-    "ios": "react-native run-ios --simulator='iPhone 14'",
+    "ios": "react-native run-ios --simulator='iPhone 14 Plus'",
     "ios:device": "react-native run-ios --device --configuration Release",
     "start": "react-native start",
     "clean-start": "npx react-native clean-project-auto && npx pod-install && npm start -- --reset-cache",
