--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "ios": "react-native run-ios --simulator='iPhone 14'",
     "ios:device": "react-native run-ios --device --configuration Release",
     "start": "react-native start",
-    "clean": "npx react-native clean-project-auto && npx pod-install && npm start",
+    "clean-start": "npx react-native clean-project-auto && npx pod-install && npm start -- --reset-cache",
     "lint": "npm run lint:eslint",
     "lint:eslint": "eslint .",
     "lint:flow": "flow check",
